deb/etc/iptables/rules.v4
# Generated by iptables-save v1.8.4 on Wed Dec  8 01:52:13 2021
*mangle
:PREROUTING ACCEPT [113:7144]
:INPUT ACCEPT [113:7144]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [109:37096]
:POSTROUTING ACCEPT [109:37096]
COMMIT
# Completed on Wed Dec  8 01:52:13 2021
# Generated by iptables-save v1.8.4 on Wed Dec  8 01:52:13 2021
*nat
:PREROUTING ACCEPT [1:36]
:INPUT ACCEPT [1:36]
:OUTPUT ACCEPT [2:236]
:POSTROUTING ACCEPT [2:236]
-A POSTROUTING -o eth1 -j MASQUERADE
COMMIT
# Completed on Wed Dec  8 01:52:13 2021
# Generated by iptables-save v1.8.4 on Wed Dec  8 01:52:13 2021
*filter
:INPUT ACCEPT [1:36]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [109:37096]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i eth2 -m state --state NEW -j ACCEPT
-A FORWARD -i eth1 -o eth2 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i eth2 -o eth1 -j ACCEPT
-A FORWARD -i eth2 -o eth1 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i eth2 -o eth1 -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Wed Dec  8 01:52:13 2021
